@@ -1597,6 +1597,7 @@
 1) coovachilli: up to version 1.3.1.3 (commit: dd05c1b3).<br>
 2) dropbear: up to 2015.71 version.<br>
 3) ethtool: up to 4.2 version.<br>
+4) irqbalance: update to 16.12.2015 git version.<br>
 <br>
 <br>
 <br>
